# NewConverters4SlopeCraft

./: .gitignore  CMakeLists.txt  README.md
cv_image_grab_cut/: CMakeLists.txt  grabCut.cpp  grabCutDefines.hpp  grabCutInterface.h
